# rust_poke_sdk

./: Cargo.toml  build.sh  poke_sdk.h  setup_android.sh
.cargo/: config.toml
demos/: demo.html
docs/: ANDROID_MAVEN.md
examples/: android_java_example.java  android_jni_simple.java  android_kotlin_example.kt  ios_swift_example.swift  web_javascript_example.js
src/: lib.rs
