[package]
name = "poke_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "poke_sdk"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
cfg-if = "1.0"

# Para compilación nativa (Android/iOS)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }

# dependencias sólo para compilación a wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window", 
    "Response", 
    "Request", 
    "RequestInit", 
    "RequestMode",
    "Headers",
    "AbortSignal"
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
